--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Meu primeiro site em bootstrap</title>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<script src="js/jquery-1.10.1.min.js" type="text/javascript"></script>
-	<script src='js/bootstrap.min.js' type="text/javascript"></script>
+	<link rel="stylesheet" href="bootstrap/css/style.css">
+	<script src="bootstrap/js/jquery-1.10.1.min.js" type="text/javascript"></script>
+	<script src='bootstrap/js/bootstrap.min.js' type="text/javascript"></script>
 </head>
 
 <body>
