--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Meu primeiro site em bootstrap</title>
+	<title>TESTE - FORMULÁRIO</title>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.css">
 	<link rel="stylesheet" href="bootstrap/css/style.css">
 	<script src="bootstrap/js/jquery-1.10.1.min.js" type="text/javascript"></script>
 	<script src='bootstrap/js/bootstrap.min.js' type="text/javascript"></script>
