--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>TESTE - FORMULÁRIO</title>
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-	<link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.css">
-	<link rel="stylesheet" href="bootstrap/css/style.css">
+	<link rel="stylesheet" href="bootstrap/css/style.css">	
+	<link rel= "stylesheet" href= "https://maxcdn.Bootstrapcdn.com/Bootstrap/3.3.2/css/Bootstrap.min.css"> 
+	<link rel= "stylesheet" href= "https://maxcdn.Bootstrapcdn.com/Bootstrap/3.3.2/css/Bootstrap-theme.min.css">
+	
 	<script src="bootstrap/js/jquery-1.10.1.min.js" type="text/javascript"></script>
 	<script src='bootstrap/js/bootstrap.min.js' type="text/javascript"></script>
 </head>
